style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    display: flex;
    flex-direction: column;
    flex: 1;
    align-items: stretch; /* makes section stretch to fit screen as much as possible*/
}

img{
    width: 300px;
    height: 200px;
}

ul{
    list-style: none;
}

a {
    text-decoration: none;
    color: white;
}

button {
 width: 100px;
}


.section {
    display: flex;
    flex: 1; /* shorthand for flex: 1 1 0 */
    flex-wrap: wrap;

}

/* top section */

.top.section{
    color: white; /* text color for top section*/
    background-color: #1F2937; 
    padding: 15px 100px 50px 100px;
    
}


.top.container{
   /* background-color: red; /* jf visual guide*/
    display: flex;
    flex: 1;
    flex-direction: column; /* makes .header and .hero columns flex */
    gap: 50px; /* adds gap between .header and .hero */
    
}

.header {
    display: flex; /* row default */
    justify-content: space-between; /* spaces the header section */
}

.header ul {
    display: flex; /* makes the list inline flex */
    gap: 8px; /* adds gap between list items */
}


/* old code removed some containers

.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex: 1 1 750px;
    padding: 15px;
}

.header ul{
    margin-left: auto;
    display: flex;
    gap: 8px;
}
*/

.hero{
    display: flex;
}

.hero.container{
    flex-basis: 40%;
    display: flex;
    flex-direction: column;
}

.hero img{
    flex-basis: 60%;
    
}

/* main section */

.main.section{
    background-color: rgb(255, 255, 255);
    padding: 15px 100px 50px 100px; 
}

.main.container{
    display: flex;
    flex-direction: column; /* makes the heading and image container column flex */
    flex-grow: 1;
    gap: 50px;
    align-items: center; /* aligns column cross axis */
}


.images.container{
    /* border: 1px solid green; */
    display: flex; /* makes .image .container a flex item */
    gap: 30px;
    flex-wrap: wrap;
    align-items: center;
}

.image.container{
    /* border: 1px solid blue; */
    display: flex; /* makes the images and p flex items */
    flex-wrap: wrap;
    flex: 1;
    justify-content: center; /* centers images and p inside the container */
    
}

.image img{
    border: 1px solid red;
    border-radius: 10px;
}

.image p {
    /* border: 1px solid green; */
    
    margin-left: 15px;
}


/* quote section */


.quote.section{
    background-color: yellowgreen;
    flex: 2 1 200px;

    text-align: center;
}

.calltoaction.section{
    
}

.calltoaction.box{
    display: flex;
    background: blue;
    
}

.footer.section{
    background-color: red;
    flex:1 1 50px; /* height inherit due to flex-direction: column*/

    display: flex; /* makes the item inside the section flex items */
    justify-content: center;
    align-items: center;
}

